--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
 <body>
     <h3>MY HOBBIES</h3>
     <ol type="i">
-        <li>Footbal</li>
+        <li>Football</li>
         <li>Games</li>
         <li>Pizza</li>
     </ol>
